# src/controllers/auth.js
@@ -1,0 +1,58 @@
+"use strict";
+/*------------------------------------------------
+|     //? Express - My Blog Api
+-------------------------------------------------*/
+
+const User = require("../models/user")
+const Token = require("../models/token")
+const passwordEncrypt = require("../helpers/passwordEncrypt")
+
+module.exports = {
+  login: async (req, res) => {
+    /*
+        #swagger.tags = ["Authentication"]
+        #swagger.summary = "Login"
+        #swagger.description = 'Login with username (or email) and password for get simpleToken and JWT'
+        #swagger.parameters["body"] = {
+            in: "body",
+            required: true,
+            schema: {
+                "username": "test",
+                "password": "1234",
+            }
+        }
+    */
+
+        const {username, password}= req.body
+
+        if(username && password){
+            const user = await User.findOne({username})
+        }else{
+            res.errorStatusCode =401
+            
+        }
+  },
+  refresh: async (req, res) => {
+    /*
+        #swagger.tags = ['Authentication']
+        #swagger.summary = 'JWT: Refresh'
+        #swagger.description = 'Refresh accessToken with refreshToken'
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                bearer: {
+                    refresh: '...refreshToken...'
+                }
+            }
+        }
+    */
+  },
+  logout: async (req, res) => {
+    /*
+        #swagger.tags = ["Authentication"]
+        #swagger.summary = "SimpleToken: Logout"
+        #swagger.description = 'Delete token key.'
+    */
+  },
+};
